# ws-petproject

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: integration.yaml
docker/: database_entrypoint.sh
github/workflows/: integration.yaml
lint-configs/: .isort.cfg  .pylintrc  mypy.ini
main/: .pylintrc  manage.py
main/main/: celery.py  kafka_service.py  middleware.py  settings.py  urls.py
main/ws_src/common/: apps.py  choices.py  models.py
main/ws_src/common/migrations/: 0001_initial.py
main/ws_src/registration/: api_handlers.py  apps.py  dependencies.py  repositories.py  schemas.py  serialiser.py  urls.py
main/ws_src/stock_market/: admin.py  apps.py  brocker.py  database.py  exceptions.py  models.py  schemas.py  tasks.py
main/ws_src/stock_market/api/: serialiser.py  urls.py  views.py
main/ws_src/stock_market/migrations/: 0001_initial.py  0002_initial.py  0002_remove_order_price.py  0003_alter_product_id.py  0003_remove_order_currency.py  0004_remove_order_user_id_order_user.py  0004_rename_product_id_order_product.py  0005_alter_product_id.py  0005_remove_order_product_id_order_product.py  0006_alter_order_product.py  0006_rename_max_price_product_highprice_and_more.py  0007_alter_order_product.py  0007_rename_name_product_symbol.py  0008_alter_order_product.py  0008_alter_product_symbol.py  0009_rename_highprice_product_high_price_and_more.py  0009_rename_product_order_product_id.py  0010_alter_product_id.py  0010_order_currency_price_order_status_alter_order_type_and_more.py  0011_order_currency_price_order_status_order_updated_at.py  0011_order_status_alter_order_type_alter_product_id.py  0012_order_currency_price_alter_order_type_and_more.py  0013_alter_order_type_alter_product_id.py
main/ws_src/users/: admin.py  apps.py  brocker.py  database.py  models.py  permissions.py  schemas.py
main/ws_src/users/api/: serializer.py  urls.py  views.py
main/ws_src/users/migrations/: 0001_initial.py  0002_alter_user_balance.py  0002_remove_user_access_token_remove_user_refresh_token.py  0004_alter_user_id.py  (+3 more)
