[tool.poetry]
name = "main"
version = "0.1.0"
description = "Backend for developer"
authors = ["matvey tulaev"]
include = ["main",]


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
celery = "^5.3.5"
redis = "^5.0.1"
djangorestframework = "^3.14.0"
fastapi = "^0.104.1"
pymongo = "^4.6.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.6.1"}
isort = "^5.13.2"
pre-commit = "^3.6.0"
gunicorn = "^21.2.0"
djangorestframework-stubs = "^3.14.5"
django-stubs = "^4.2.7"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-redis = "^5.4.0"
netcat = "^0.0.1a0"
kafka-python = "^2.0.2"
pytest = "^8.0.0"
aiokafka = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"
black = "^23.11.0"
